--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "react-dom": "^18.2.0",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.2",
     "ts-node": "^10.9.1",
+    "twilio": "^4.11.2",
     "typescript": "^4.9.3",
     "vite-express": "*"
   },
