--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@supabase/auth-ui-react": "^0.4.2",
+    "@supabase/auth-ui-shared": "^0.1.6",
+    "@supabase/supabase-js": "^2.25.0",
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
